--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
+    "bootstrap": "4",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "less": "4",
+    "less-loader": "5",
+    "vue": "^2.6.11",
+    "vue-cookies": "^1.8.3",
+    "vue-router": "3.0.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.19",
