--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "less": "4",
     "less-loader": "5",
+    "uuid": "^9.0.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.3",
     "vue-router": "3.0.1",
