--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode dev",
-    "build:test": "vue-cli-service build --mode test",
-    "build:prod": "vue-cli-service build --mode prod",
+    "serve": "vue-cli-service serve --mode prod",
+    "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
