--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build --mode prod",
+    "build:dev": "vue-cli-service build --mode dev",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "bootstrap": "4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
+    "element-ui": "2.15.13",
     "less": "4",
     "less-loader": "5",
     "uuid": "^9.0.0",
