--- a/.env.dev
+++ b/.env.dev
@@ -3,10 +3,10 @@ NODE_ENV=development
 
 BASE_URL="/"
 # 官网
-VUE_APP_WEBSITE_SERVER="https://aios.sco.tudb.work"
+VUE_APP_WEBSITE_SERVER=""
 # 法律
-VUE_APP_LAW_SERVER="https://legal.sco.tudb.work"
+VUE_APP_LAW_SERVER="/legal"
 # 购车咨询
-VUE_APP_BUYCAR_SERVER="https://car.sco.tudb.work"
+VUE_APP_BUYCAR_SERVER="/car"
 # 获取ip地址
-VUE_APP_IP_SERVER="https://ipv4.icanhazip.com"
+VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
