--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "zkzd-website",
+  "name": "permsion-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode prod",
+    "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode prod",
-    "build:dev": "vue-cli-service build --mode dev",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
+    "@kangc/v-md-editor": "^1.7.11",
     "axios": "^1.4.0",
     "bootstrap": "4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
-    "element-ui": "2.15.13",
-    "less": "4",
-    "less-loader": "5",
-    "uuid": "^9.0.0",
+    "element-ui": "^2.15.13",
+    "less": "4.1.3",
+    "less-loader": "7.3.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.3",
-    "vue-router": "3.0.1",
+    "vue-router": "3.0.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.19",
-    "@vue/cli-plugin-eslint": "~4.5.19",
-    "@vue/cli-service": "~4.5.19",
+    "@vue/cli-plugin-babel": "~4.5.11",
+    "@vue/cli-plugin-eslint": "~4.5.11",
+    "@vue/cli-service": "~4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
