--- a/.env.prod
+++ b/.env.prod
@@ -8,5 +8,7 @@ VUE_APP_WEBSITE_SERVER=""
 VUE_APP_LAW_SERVER="/legal"
 # 购车咨询
 VUE_APP_BUYCAR_SERVER="/car"
+# 智能机器人
+VUE_APP_GWQA_SERVER="/gwqa"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
