--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.3",
     "vue-router": "3.0.6",
+    "vuex": "3.4.0",
+    "vuex-persistedstate": "^4.1.0",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
