--- a/.env.dev
+++ b/.env.dev
@@ -3,10 +3,10 @@ NODE_ENV=development
 
 BASE_URL="/"
 # 官网
-VUE_APP_WEBSITE_SERVER=""
+VUE_APP_WEBSITE_SERVER="https://aios.sco.tudb.work"
 # 法律
-VUE_APP_LAW_SERVER="/legal"
+VUE_APP_LAW_SERVER="https://aios.sco.tudb.work/legal"
 # 购车咨询
-VUE_APP_BUYCAR_SERVER="/car"
+VUE_APP_BUYCAR_SERVER="https://aios.sco.tudb.work/car"
 # 智能机器人
-VUE_APP_GWQA_SERVER="/gwqa"
+VUE_APP_GWQA_SERVER="https://gwqa.sco.tudb.work"
