智能机器人对话接口修改

--- a/.env.prod
+++ b/.env.prod
@@ -9,6 +9,6 @@ VUE_APP_LAW_SERVER="/legal"
 # 购车咨询
 VUE_APP_BUYCAR_SERVER="/car"
 # 智能机器人
-VUE_APP_GWQA_SERVER="https://gwqa.sco.tudb.work"
+VUE_APP_GWQA_SERVER="/gwqa"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
