--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.15.13",
     "less": "4.1.3",
     "less-loader": "7.3.0",
+    "pdfjs-dist": "^2.16.105",
     "vue": "^2.6.11",
     "vue-cookies": "^1.8.3",
     "vue-router": "3.0.6",
