--- a/.env.dev
+++ b/.env.dev
@@ -12,3 +12,5 @@ VUE_APP_BUYCAR_SERVER="/car"
 VUE_APP_GWQA_SERVER="/gwqa"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
+#文件服务地址
+VUE_APP_FILE_SERVER=https://cdn.tudb.work
