--- a/.env.dev
+++ b/.env.dev
@@ -10,6 +10,12 @@ VUE_APP_LAW_SERVER="/legal"
 VUE_APP_BUYCAR_SERVER="/car"
 # 智能机器人
 VUE_APP_GWQA_SERVER="/gwqa"
+# pdf
+VUE_APP_PDF_SERVER="/pdf-api"
+# 牙医
+VUE_APP_DENTIST_SERVER="/dentist"
+# gas
+VUE_APP_GAS_SERVER="/gas"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
 #文件服务地址
