--- a/.env.prod
+++ b/.env.prod
@@ -10,6 +10,12 @@ VUE_APP_LAW_SERVER="/legal"
 VUE_APP_BUYCAR_SERVER="/car"
 # 智能机器人
 VUE_APP_GWQA_SERVER="/gwqa"
+# pdf
+VUE_APP_PDF_SERVER="https://pdf.sco.tudb.work"
+# 牙医
+VUE_APP_DENTIST_SERVER="https://yayi.sco.tudb.work"
+# gas
+VUE_APP_GAS_SERVER="https://sqljava.sco.tudb.work"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
 #文件服务地址
