--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "4",
     "bootstrap-vue": "^2.23.1",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
     "less": "4.1.3",
