--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
+    "alife-logger": "^1.8.30",
     "axios": "^1.4.0",
     "bootstrap": "4",
     "bootstrap-vue": "^2.23.1",
-    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
+    "jsonp": "^0.2.1",
     "less": "4.1.3",
     "less-loader": "7.3.0",
     "pdfjs-dist": "^2.16.105",
