--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "jsonp": "^0.2.1",
     "less": "4.1.3",
