牙医和天然气的接口修改

--- a/.env.dev
+++ b/.env.dev
@@ -11,7 +11,7 @@ VUE_APP_BUYCAR_SERVER="/car"
 # 智能机器人
 VUE_APP_GWQA_SERVER="/gwqa"
 # 牙医
-VUE_APP_DENTIST_SERVER="/dentist"
+VUE_APP_DENTIST_SERVER="/yayi"
 # gas
 VUE_APP_GAS_SERVER="/gas"
 # 获取ip地址
