--- a/.env.prod
+++ b/.env.prod
@@ -11,9 +11,9 @@ VUE_APP_BUYCAR_SERVER="/car"
 # 智能机器人
 VUE_APP_GWQA_SERVER="/gwqa"
 # 牙医
-VUE_APP_DENTIST_SERVER="https://yayi.sco.tudb.work"
+VUE_APP_DENTIST_SERVER="/yayi"
 # gas
-VUE_APP_GAS_SERVER="https://sqljava.sco.tudb.work"
+VUE_APP_GAS_SERVER="/gas"
 # 获取ip地址
 VUE_APP_IP_SERVER=https://ipv4.icanhazip.com
 #文件服务地址
